prometheus-operator/kube-prometheus-stack/extras/prometheus-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: sonarr-gateway
  namespace: media
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - prometheus.greaterfaydark.net
      port:
        name: https-frontend
        number: 443
        protocol: HTTPS
      tls:
        credentialName: prometheus-ingress-lets-encrypt
        mode: SIMPLE
